Ajout du loader, update README

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,27 @@ html {
 
 body {
   margin: 0;
+  overflow: hidden;
+}
+
+.loader {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 20;
+}
+
+.icon {
+  border-bottom: solid 2px darkcyan;
+  width: 10vw;
+  height: 10vw;
+  border-radius: 50%;
+  z-index: 30;
+  animation: loaderSpin 2s infinite linear;
 }
 
 .header {
@@ -116,9 +137,6 @@ body {
 }
 .header .dis-pack-container a {
   margin-right: 1em;
-}
-.header.scroll {
-  display: none;
 }
 
 .landing-image {
@@ -224,6 +242,19 @@ body {
     transform: translateY(0);
   }
 }
+@keyframes loaderSpin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+header.fondu-out, .loader.fondu-out {
+  opacity: 0;
+  transition: opacity 200ms ease-out;
+}
+
 @media screen and (max-width: 650px) {
   .header .dis-pack-container {
     display: none;
