--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ body {
 }
 .landing-image h3 {
   font-family: "Urbanist", sans-serif;
-  font-size: clamp(25px, 5vw, 60px);
+  font-size: 45px;
   width: 100%;
   text-align: center;
   color: #f1f2f5;
@@ -162,8 +162,8 @@ body {
   bottom: 5vmin;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: clamp(35px, 5vw, 50px);
-  width: clamp(35px, 5vw, 50px);
+  height: 42px;
+  width: 42px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -180,10 +180,10 @@ body {
 }
 .main-content h1, .main-content span {
   font-family: "Urbanist", sans-serif;
-  font-size: clamp(25px, 7vw, 70px);
+  font-size: 7vw;
 }
 .main-content span {
-  font-size: clamp(14px, 2vw, 20px);
+  font-size: 17px;
 }
 .main-content .slideshow-container {
   margin: 2vw 0;
